; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/extr_i915_drv.c_i915_kick_out_firmware_fb.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/extr_i915_drv.c_i915_kick_out_firmware_fb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_i915_private = type { %struct.i915_ggtt, %struct.TYPE_8__ }
%struct.i915_ggtt = type { i32, %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32 }
%struct.TYPE_8__ = type { %struct.pci_dev* }
%struct.pci_dev = type { %struct.TYPE_7__* }
%struct.TYPE_7__ = type { i32 }
%struct.apertures_struct = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i32, i32 }

@ENOMEM = common dso_local global i32 0, align 4
@PCI_ROM_RESOURCE = common dso_local global i64 0, align 8
@IORESOURCE_ROM_SHADOW = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [11 x i8] c"inteldrmfb\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.drm_i915_private*)* @i915_kick_out_firmware_fb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @i915_kick_out_firmware_fb(%struct.drm_i915_private* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.drm_i915_private*, align 8
  %4 = alloca %struct.apertures_struct*, align 8
  %5 = alloca %struct.pci_dev*, align 8
  %6 = alloca %struct.i915_ggtt*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.drm_i915_private* %0, %struct.drm_i915_private** %3, align 8
  %9 = load %struct.drm_i915_private*, %struct.drm_i915_private** %3, align 8
  %10 = getelementptr inbounds %struct.drm_i915_private, %struct.drm_i915_private* %9, i32 0, i32 1
  %11 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %10, i32 0, i32 0
  %12 = load %struct.pci_dev*, %struct.pci_dev** %11, align 8
  store %struct.pci_dev* %12, %struct.pci_dev** %5, align 8
  %13 = load %struct.drm_i915_private*, %struct.drm_i915_private** %3, align 8
  %14 = getelementptr inbounds %struct.drm_i915_private, %struct.drm_i915_private* %13, i32 0, i32 0
  store %struct.i915_ggtt* %14, %struct.i915_ggtt** %6, align 8
  %15 = call %struct.apertures_struct* @alloc_apertures(i32 1)
  store %struct.apertures_struct* %15, %struct.apertures_struct** %4, align 8
  %16 = load %struct.apertures_struct*, %struct.apertures_struct** %4, align 8
  %17 = icmp ne %struct.apertures_struct* %16, null
  br i1 %17, label %21, label %18

18:                                               ; preds = %1
  %19 = load i32, i32* @ENOMEM, align 4
  %20 = sub nsw i32 0, %19
  store i32 %20, i32* %2, align 4
  br label %54

21:                                               ; preds = %1
  %22 = load %struct.i915_ggtt*, %struct.i915_ggtt** %6, align 8
  %23 = getelementptr inbounds %struct.i915_ggtt, %struct.i915_ggtt* %22, i32 0, i32 1
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load %struct.apertures_struct*, %struct.apertures_struct** %4, align 8
  %27 = getelementptr inbounds %struct.apertures_struct, %struct.apertures_struct* %26, i32 0, i32 0
  %28 = load %struct.TYPE_6__*, %struct.TYPE_6__** %27, align 8
  %29 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %28, i64 0
  %30 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %29, i32 0, i32 1
  store i32 %25, i32* %30, align 4
  %31 = load %struct.i915_ggtt*, %struct.i915_ggtt** %6, align 8
  %32 = getelementptr inbounds %struct.i915_ggtt, %struct.i915_ggtt* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = load %struct.apertures_struct*, %struct.apertures_struct** %4, align 8
  %35 = getelementptr inbounds %struct.apertures_struct, %struct.apertures_struct* %34, i32 0, i32 0
  %36 = load %struct.TYPE_6__*, %struct.TYPE_6__** %35, align 8
  %37 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %36, i64 0
  %38 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %37, i32 0, i32 0
  store i32 %33, i32* %38, align 4
  %39 = load %struct.pci_dev*, %struct.pci_dev** %5, align 8
  %40 = getelementptr inbounds %struct.pci_dev, %struct.pci_dev* %39, i32 0, i32 0
  %41 = load %struct.TYPE_7__*, %struct.TYPE_7__** %40, align 8
  %42 = load i64, i64* @PCI_ROM_RESOURCE, align 8
  %43 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %41, i64 %42
  %44 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %43, i32 0, i32 0
  %45 = load i32, i32* %44, align 4
  %46 = load i32, i32* @IORESOURCE_ROM_SHADOW, align 4
  %47 = and i32 %45, %46
  store i32 %47, i32* %7, align 4
  %48 = load %struct.apertures_struct*, %struct.apertures_struct** %4, align 8
  %49 = load i32, i32* %7, align 4
  %50 = call i32 @drm_fb_helper_remove_conflicting_framebuffers(%struct.apertures_struct* %48, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 %49)
  store i32 %50, i32* %8, align 4
  %51 = load %struct.apertures_struct*, %struct.apertures_struct** %4, align 8
  %52 = call i32 @kfree(%struct.apertures_struct* %51)
  %53 = load i32, i32* %8, align 4
  store i32 %53, i32* %2, align 4
  br label %54

54:                                               ; preds = %21, %18
  %55 = load i32, i32* %2, align 4
  ret i32 %55
}

declare dso_local %struct.apertures_struct* @alloc_apertures(i32) #1

declare dso_local i32 @drm_fb_helper_remove_conflicting_framebuffers(%struct.apertures_struct*, i8*, i32) #1

declare dso_local i32 @kfree(%struct.apertures_struct*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
